--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-right-section">
                 <li>
                     <a href="">Google</a>
                 </li>
                 <li>
-                    <a href="">Imagenes</a>
+                    <a href="">Imágenes</a>
+                </li>
+                <li class="menu-icon">
+                    <a href=""></a>
                 </li>
                 <li>
-                    <a href="">Icon</a>
-                </li>
-                <li>
-                    <a href="">Photo</a>
+                    <a href=""><img src="https://lh3.googleusercontent.com/ogw/AOh-ky20upiCZu-6CmT9vqDdkmWcYfst0fpMe_6z1sb5X4E=s32-c-mo" alt="imgen de perfil"></a>
                 </li>
             </ul>
         </nav>
