--- a/index.html
+++ b/index.html
@@ -43,5 +43,33 @@
 
         </section>
     </main>
+    <footer>
+        <ul class="footer-left">
+            <li>
+                <a href="">Sobre Google</a>
+            </li>
+            <li>
+                <a href="">Publicidad</a>
+            </li>
+            <li>
+                <a href="">Negocios</a>
+            </li>
+            <li>
+                <a href="">Como funciona la busqueda</a>
+            </li>
+        </ul>
+
+        <ul class="footer-right">
+            <li>
+                <a href="">Privacidad</a>
+            </li>
+            <li>
+                <a href="">Condiciones</a>
+            </li>
+            <li>
+                <a href="">Preferencias</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
